# openclaw-files-server

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
docs/: DESIGN.md  TESTS.md
static/: app.js  style.css
tests/: support.py  test_server.py  test_ui_features.py
