[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-webserver"
version = "0.1.0"
description = "A lightweight stdlib-based file browser for ~/.openclaw"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
py-modules = ["server"]

[dependency-groups]
test = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
